--- a/styles/Issue3.module.css
+++ b/styles/Issue3.module.css
@@ -1,24 +1,14 @@
 .fullPageBackground {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  font-size: 16px;
-  margin: 0;
-}
-
-.fullPageBackground::before {
-  content: "";
-  position: absolute;
+  position: fixed;
   background: linear-gradient(
       90deg,
       rgba(32, 32, 32, 0.05),
       rgba(32, 32, 32, 0.25)
     ),
     url("../public/images/Issue3Cover.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-size: cover;
+  min-height: 100%;
+  min-width: 100%;
   top: 0px;
   right: 0px;
   bottom: 0px;
