--- a/styles/issue1.module.css
+++ b/styles/issue1.module.css
@@ -92,7 +92,15 @@
   font-size: 0.9rem;
   border-radius: 44px;
   cursor: pointer;
+  opacity:0.6;
+  margin-right:1.7vw;
 }
+
+.siteShortcuts > .linkButton:hover {
+     background-color:black;
+     letter-spacing:5px;
+     opacity:1;
+  }
 
 .siteShortcuts > .linkButton:not(:first-child) {
   margin-left:5px;
@@ -108,7 +116,7 @@
 .twitterLinkTag {
   position: relative;
   background-color: inherit;
-  padding: 1.3vh 1.7vw;
-  border: 1px solid white;
-  border-radius: 50%;
+  padding: 0.2vh 0.6vw;
+  border: 1px dashed white;
+  border-radius: 44px;
 }
